--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         url: url,
         type: 'GET',
         dataType: "json",
-        success: 
+        success: displayAll
 			
     });
-		}
+		
 		       
 	
 			
